src/main/java/com/example/codingtest/core/error/ex/Exception403.java
package com.example.codingtest.core.error.ex;

// 인증관련
public class Exception403 extends RuntimeException {
    public Exception403(String message) {
        super(message);
    }
}
